# AgenticInvest

./: .gitignore  ADVERSARIAL_REVIEW.md  README.md  pyproject.toml
.cursor/rules/: developement-rule.mdc  report-rule.mdc
agenticinvest/: README.md  pyproject.toml
agenticinvest/src/agenticinvest/: main.py
docs/: COUNTERFACTUAL_ANALYSIS_REPORT.md  SYSTEM_INVARIANTS.md
samples/: README.md
src/crews/: debate_crew.py  fundamentals_crew.py  news_crew.py  options_liquidity_crew.py  price_crew.py  regulation_legal_crew.py
src/tools/: mcp_client.py  mcp_news_server.py  news_fetcher.py
src/utils/: llm.py
src/visualization/: __init__.py  graphviz_visualizer.py  mermaid_generator.py  networkx_visualizer.py  plot_flow.py  system_analyzer.py
