[project]
name = "crewai-market-research"
version = "0.1.0"
description = "Dynamic Market Research Orchestrator using CrewAI"
requires-python = ">=3.11"
dependencies = [
    "crewai",
    "pydantic",
    "typer",
    "python-dotenv",
    "httpx",
    "mcp",
    "networkx",
    "matplotlib",
    "plotly",
    "graphviz",
]

[project.scripts]
market-research = "src.cli:app"
plot = "src.visualization.plot_flow:plot_flow_command"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
