[project]
name = "agenticinvest"
version = "0.1.0"
description = "agenticInvest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
kickoff = "agenticinvest.main:kickoff"
run_crew = "agenticinvest.main:kickoff"
plot = "agenticinvest.main:plot"
run_with_trigger = "agenticinvest.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
